package it.polimi.ingsw.controller;

public interface GameController {
}
