@startuml
skinparam classAttributeIconSize 0

package common {
    interface LobbyView {
        Provider<@Nullable GameAndController> game()
    }

    LobbyView --> GameAndController : provides asyncronously
    class GameAndController {
        - GameView model;
        - GameController controller;

        + GameView getModel();
        + GameController getController();
    }

    GameController "1" --* GameAndController
    interface GameController {
        // selected has to be in the right shelf insertion order
        void makeMove(List<BoardCoord> selected, int shelfCol)
    }

    class BoardCoord {
        - int row;
        - int column;

        int getRow();
        int getCol();
    } 

}

package server {
    class ServerController {
        + LobbyView joinGame( \n\
            String nick, \n\
            LobbyUpdaterFactory updaterFactory, \n\
            Supplier<GameController> gameControllerFactory)
    }

    class GameServerController {
        This is the actual game controller
        __
        - Game game
        __ game controlling overloaded with player instance __
        + void makeMove(Player player, List<BoardCoord> selected, int shelfCol)
    }
}

package client {
    interface ClientNetManager {
        LobbyView establishConnection(String nick);
    }

    ClientNetManager --> LobbyView : provides
}

ClientNetManager ..> ServerController : calls via a rmi/socket adapter
ServerController ..> ClientNetManager : responds via a rmi/socket adapter
GameController ..> GameServerController : calls via a rmi/socket adapter

@enduml